# vesuvianite_osx

./: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  example_xmp.xmp  run.sh  x-c_cpp_properties.json
XMP-Toolkit-SDK-in-vesuvianite/XMPFiles/source/: XMPFiles_Impl.cpp
apps/: CMakeLists.txt  app.cxx
generated-xml/: created_xml_1.xml
include/vesuvianite/: ConvexHull.hpp  GetScaledIsolationRect.hpp  HoughLines.hpp  IsolateSubject.hpp  RawLoader.hpp  SourceImage.hpp  SubjectPlacement.hpp  XmpWriter.hpp
src/: CMakeLists.txt  ConvexHull.cxx  GetScaledIsolationRect.cxx  HoughLines.cxx  IsolateSubject.cxx  RawLoader.cxx  SourceImage.cxx  XmpWriter.cxx
