add_executable(app app.cxx)
set(CMAKE_DL_LIBS -lcl)
target_compile_features(app PRIVATE cxx_std_20)
# target_link_libraries(app PRIVATE rawLoaderLib)
# target_link_libraries(app PRIVATE houghLines)
# target_link_libraries(app PRIVATE convexHull)
# target_link_libraries(app PRIVATE IsolateSubject)
# target_link_libraries(app PRIVATE GetScaledIsolationRect)
target_link_libraries(app PRIVATE SourceImage)
target_link_libraries(app PRIVATE nfd)
target_link_libraries(app PRIVATE XmpWriter)
# target_link_libraries(app INTERFACE SubjectPlacement)